TRACS-74 refactored